src/App.css
@font-face {
  font-family: neon-sign;
  src: url(../src/fonts/Clip.ttf)
}

.App {
  text-align: center;
}

.App-header {
  background-color: black;
  font-family: neon-sign;
  font-size: 48px;
  margin-bottom: 15px;
  line-height: 100px;
  height: 100px;
  color: rgb(46, 255, 231);
  text-shadow: 2px 2px 3px rgb(46, 255, 231), 0px 0px 4px rgb(25, 166, 213), 0px 0px 5px rgb(25, 166, 213), 0px 0px 6px rgb(22, 173, 223), 0px 0px 8px rgb(22, 173, 223), 0px 0px 10px rgb(22, 173, 223), 0px 0px 20px rgb(22, 173, 223), 1px 1px 30px rgb(22, 173, 223)
}

.App-main, .App-main>*, .input-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.input-form input {
  margin: 10px;
}

.textWrapper {
  background-color: black;
  font-family: neon-sign;
  font-size: 48px;
  margin: 15px;
  height: 200px;
  width: 400px;
  text-align: center;
  justify-content: center;
  color: white;
}

.codeWrapper {
  font-family: monospace;
  justify-content: left;
  align-items: flex-start;
  margin: 15px;
  outline: 1px solid grey;
  padding: 24px;
  height: 150px;
  width: 350px;
}

.shadowOutput {
  font-family: monospace;
  text-align: left;
  margin-left: 20px;
}

.App-footer {
  background-color: lightgrey;
  position: absolute;
  bottom: 0px;
  padding: 10px;
  width: 100%;
}

